// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading6 should match snapshot 1`] = `
.c0 {
  font-size: 29px;
  font-weight: 900;
  line-height: 450;
  color: rgba(255,255,255,0.54);
}

<h6
  className="c0"
/>
`;

exports[`Heading6 should render an Heading6 1`] = `
.c0 {
  font-size: 29px;
  font-weight: 900;
  line-height: 450;
  color: rgba(76,76,76,0.54);
}

<h6
  className="c0"
/>
`;
